--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,8 @@
-apply plugin: 'java-library'
-apply plugin: 'application'
-apply plugin: 'maven-publish'
+plugins {
+    id 'java-library'
+    id 'application'
+    id 'maven-publish'
+}
 
 group 'org.moddingx'
 java.toolchain.languageVersion = JavaLanguageVersion.of(21)
@@ -10,15 +12,16 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'org.jetbrains:annotations:24.1.0'
     implementation 'net.sf.jopt-simple:jopt-simple:5.0.4'
-    implementation 'com.sparkjava:spark-core:2.9.4'
+    implementation 'org.zoomba-lang:spark-core:3.0'
     implementation 'com.google.guava:guava:33.2.1-jre'
-    implementation 'com.google.code.gson:gson:2.10.1'
-    implementation 'org.jtwig:jtwig-core:5.87.0.RELEASE'
+    implementation 'com.google.code.gson:gson:2.11.0'
 
-    implementation 'org.slf4j:slf4j-api:2.0.7'
-    runtimeOnly 'org.slf4j:slf4j-jdk14:2.0.7'
+    implementation 'org.slf4j:slf4j-api:2.0.13'
+    runtimeOnly 'org.slf4j:slf4j-jdk14:2.0.13'
+    
+    implementation(platform('org.eclipse.jetty:jetty-bom')) { version { strictly '[11.0.21,12.0.0)' } }
 }
 
 application.mainClass = "org.moddingx.modbadges.Main"
@@ -31,10 +34,17 @@ jar {
     ])
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    archiveClassifier = 'sources'
+    from sourceSets.main.allSource
+}
+build.dependsOn sourcesJar
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
             from components.java
+            artifact sourcesJar
             pom {
                 licenses {
                     license {
@@ -48,6 +58,7 @@ publishing {
 
     repositories {
         maven {
+            name 'moddingx'
             url 'https://maven.moddingx.org/release'
             credentials(PasswordCredentials)
         }
